# writing-practice

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
src/: config.rs  db.rs  main.rs  template.rs
src/page/: import.rs  mod.rs  writing.rs
www/: README.md
www/js/: hanzi-writer.js  stroke-order.js
www/style/: writer.css
