[package]
name = "chinese-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
toml = "0.8.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
